Fri Aug  4 14:50:41 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* python/generator.py: fixed the conversion of long parameters

Wed Jul 19 15:06:39 EDT 2006 Daniel Veillard <daniel@veillard.com>

	* python/types.c: fix float and boolean XPath conversions
	* libxslt/xsltutils.c: try to fix Stephane Bidoul attempt
	  at setting XInclude support.

Mon Jul 17 11:15:23 PDT 2006 William Brack <wbrack@mmm.com.hk>

	* Updated tests affected by recent library changes -
	  tests/general/bug-1-.out, tests/general/bug-24-.out,
	  tests/keys/month.out : (<t></t> now becomes <t/>);
	  tests/general/bug-41-.xsl and tests/general/bug-43.xsl :
	  call-template and apply-template, where the template has
	  no parameter but one is supplied (var should not be affected)
	  tests/general/bug-145.err : changed error text
	  
Fri Jul 14 18:16:59 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/attributes.c libxslt/documents.c
	  libxslt/functions.c libxslt/keys.c libxslt/namespaces.c
	  libxslt/pattern.c libxslt/preproc.c libxslt/templates.c
	  libxslt/templates.h libxslt/transform.c
	  libxslt/variables.c libxslt/xslt.c
	  libxslt/xsltInternals.h libxslt/xsltutils.c
	  libxslt/xsltutils.h libexslt/common.c libexslt/dynamic.c
	  libexslt/functions.c libexslt/strings.c:
	  Committing again, since I forgot to switch from win to linux
	  linebreaks in the files.
						    
Fri Jul 14 17:55:42 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/attributes.c libxslt/documents.c
	  libxslt/functions.c libxslt/keys.c libxslt/namespaces.c
	  libxslt/pattern.c libxslt/preproc.c libxslt/templates.c
	  libxslt/templates.h libxslt/transform.c libxslt/variables.c
	  libxslt/xslt.c libxslt/xsltInternals.h libxslt/xsltutils.c
	  libxslt/xsltutils.h libexslt/common.c libexslt/dynamic.c
	  libexslt/functions.c libexslt/strings.c:
	  Refactored xsltValueOf(). Changed to use xmlXPathCastToString()
	  directly, rather than creating an intermediate object with